--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -185,7 +185,7 @@ a:hover {
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	align:items: flex-start;
+	align-items: flex-start;
 	width: 100%;
 
 	h3 {
