--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,7 +171,7 @@ a:hover {
 	justify-content: space-between;
 	align-items: flex-start;
 	margin-left: auto;
-	margin-right;
+	margin-right: auto;
 }
 
 .subt {
