--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -172,6 +172,7 @@ a:hover {
 	align-items: flex-start;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 2em;
 }
 
 .subt {
@@ -216,6 +217,14 @@ a:hover {
 
 .member {
 	width: 100%;
+
+	p {
+		margin-top: 1em;
+	}
+
+	.fa-2x {
+		font-size: 1.5em;
+	}
 }
 
 #coders {
