Correction on CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    border-bottom: 1px solid #979FA0;
+    border-bottom: 1px solid #5F6666;
     margin-bottom: .3em; }
 
 .members {
