--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -185,7 +185,7 @@ a:hover {
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
-		border-bottom: 1px solid $light-grey;
+		border-bottom: 1px solid $dark-grey;
 		margin-bottom: .3em;
 	}
 }
