--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -169,3 +169,12 @@
         font-style: italic;
     }
 }
+
+.error {
+    color: white;
+    background-color: #D32647;
+    display: block;
+    position: relative;
+    z-index: 1;
+    padding: 0.2em;
+}
