--- a/assets/css/_ontdek-profiel.scss
+++ b/assets/css/_ontdek-profiel.scss
@@ -68,6 +68,7 @@
     font-family: 'Suez One';
     margin-top: 4em;
     margin-left: 2em;
+    margin-bottom: 1em;
 
     h2 {
         font-size: 2em;
