--- a/assets/css/_map.scss
+++ b/assets/css/_map.scss
@@ -8,7 +8,11 @@
 }
 
 .full-map-container{
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     margin-top: 65px;
 }
 
@@ -28,12 +32,9 @@
     width: 100%;
 }
 
-#map1{
-    height: 84%;
+#map1 {
+    height: 100%
 }
-
-
-
 
 .map-container-small-leaftlet{
     height: 120%;
