--- a/assets/css/_ontdek-profiel.scss
+++ b/assets/css/_ontdek-profiel.scss
@@ -176,6 +176,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
+    .page-content {
+        padding-bottom: 4.5em;
+    }
 }
 
 .ontdek-login {
